Fix - Whitespace before form field when field-icon disabled

--- a/assets/css/user-registration.scss
+++ b/assets/css/user-registration.scss
@@ -167,10 +167,6 @@
 		#node_recaptcha_register {
 			padding: 0 10px;
 		}
-
-		.input-text {	
-			padding-left: 35px !important;
-		}
 	}
 
 	* {
